bug修改  首页修改

--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,13 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+  body {
+    padding-right: 0px !important; 
+  }
+ 	*.modal-open {
+		overflow-y: scroll;
+		padding-right: 0 !important;
+	}
+  </style>
 </html>
