调整首页日历样式

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>飞机施药质量监管综合服务平台</title>
+    <title>vue3.0</title>
   </head>
   <body>
     <noscript>
-      <strong>飞机施药质量监管综合服务平台</strong>
+      <strong>BIP配置型集成平台</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
