DLG弹出框样式修改

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>飞机施药综合服务平台</title>
+    <title>人力资源系统</title>
   </head>
   <body>
     <noscript>
-      <strong>飞机施药综合服务平台</strong>
+      <strong>人力资源系统</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
