--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- 天地图 -->
+    <!-- <script src="http://api.tianditu.gov.cn/api?v=4.0&tk=7b036021d9213378213ecdefb18162db" type="text/javascript"></script> -->
+    <!-- 百度地图 -->
+    <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=0ZCCVWS8N9YXhn0evYxRdw7MBwGuVcVx"></script> -->
     <title>人力资源系统</title>
   </head>
   <body>
