--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <!-- 天地图 -->
     <script src="http://api.tianditu.gov.cn/api?v=4.0&tk=7b036021d9213378213ecdefb18162db" type="text/javascript"></script>
     <!-- 天地图轨迹类库 -->
-    <script src="./js/TMap/d3.js" charset="utf-8"></script>
-    <script src="./js/TMap/D3SvgOverlay.js" type="text/javascript"></script>
-    <script src="./js/TMap/CarTrack.js" type="text/javascript"></script>
+    <script src="./static/js/TMap/d3.js" charset="utf-8"></script>
+    <script src="./static/js/TMap/D3SvgOverlay.js" type="text/javascript"></script>
+    <script src="./static/js/TMap/CarTrack.js" type="text/javascript"></script>
    
     <!-- 百度地图 -->
     <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=0ZCCVWS8N9YXhn0evYxRdw7MBwGuVcVx"></script> -->
