飞防识别区导出

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
    
     <!-- 百度地图 -->
     <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=0ZCCVWS8N9YXhn0evYxRdw7MBwGuVcVx"></script> -->
-    <title>人力资源系统</title>
+    <title>飞机施药质量监测监管自动化计量综合服务平台</title>
   </head>
   <body>
     <noscript>
-      <strong>人力资源系统</strong>
+      <strong>飞机施药质量监测监管自动化计量综合服务平台</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
