--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- <script>
+        var userAgentInfo = navigator.userAgent;
+        var Agents = ["Android", "iPhone",
+                "SymbianOS", "Windows Phone",
+                "iPad", "iPod"];
+        var flag = true;
+        for (var v = 0; v < Agents.length; v++) {
+            if (userAgentInfo.indexOf(Agents[v]) > 0) {
+            flag = false;
+            break;
+            }
+        }
+        if(flag == false){
+            window.location.href='./webMobile'
+        }
+    </script> -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- 天地图 -->
     <script src="http://api.tianditu.gov.cn/api?v=4.0&tk=7b036021d9213378213ecdefb18162db" type="text/javascript"></script>
@@ -12,13 +28,24 @@
     <script src="./static/js/TMap/D3SvgOverlay.js" type="text/javascript"></script>
     <script src="./static/js/TMap/CarTrack.js" type="text/javascript"></script>
    
-    <!-- 百度地图 -->
-    <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=0ZCCVWS8N9YXhn0evYxRdw7MBwGuVcVx"></script> -->
-    <title>飞机施药质量监测监管自动化计量综合服务平台</title>
+    <title>BIP</title>
+    
+    <script type="text/javascript">
+        var url = "./static/config.json"
+        var request = new XMLHttpRequest();
+        request.open("get", url);
+        request.send(null);
+        request.onload = function () {
+            if (request.status == 200) {
+                var config = JSON.parse(request.responseText);
+                document.getElementsByTagName("title")[0].innerText = config.Project_Name;		
+            }
+        }	
+    </script>
   </head>
   <body>
     <noscript>
-      <strong>飞机施药质量监测监管自动化计量综合服务平台</strong>
+      <strong>BIP</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
