--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <script src="./static/js/TMap/D3SvgOverlay.js" type="text/javascript"></script>
     <script src="./static/js/TMap/CarTrack.js" type="text/javascript"></script>
    
-    <title>BIP</title>
+    <title></title>
     
     <script type="text/javascript">
         var url = "./static/config.json"
@@ -45,7 +45,7 @@
   </head>
   <body>
     <noscript>
-      <strong>BIP</strong>
+      <strong></strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
