--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     </script> -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- 天地图 -->
-    <script src="http://api.tianditu.gov.cn/api?v=4.0&tk=7b036021d9213378213ecdefb18162db" type="text/javascript"></script>
+    <script src="https://api.tianditu.gov.cn/api?v=4.0&tk=7b036021d9213378213ecdefb18162db" type="text/javascript"></script>
     <!-- 天地图轨迹类库 -->
     <script src="./static/js/TMap/d3.js" charset="utf-8"></script>
     <script src="./static/js/TMap/D3SvgOverlay.js" type="text/javascript"></script>
