搅拌站大屏

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
     <script src="./static/js/TMap/d3.js" charset="utf-8"></script>
     <script src="./static/js/TMap/D3SvgOverlay.js" type="text/javascript"></script>
     <script src="./static/js/TMap/CarTrack.js" type="text/javascript"></script>
-   
+    <!-- 动态尺寸 -->
+    <script src="./static/js/bip-erp/flexible.js" type="text/javascript"></script>
     <title></title>
     
     <script type="text/javascript">
