--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <script>
-        var userAgentInfo = navigator.userAgent;
-        var Agents = ["Android", "iPhone",
-                "SymbianOS", "Windows Phone",
-                "iPad", "iPod"];
-        var flag = true;
-        for (var v = 0; v < Agents.length; v++) {
-            if (userAgentInfo.indexOf(Agents[v]) > 0) {
-            flag = false;
-            break;
-            }
-        }
-        if(flag == false){
-            window.location.href='./webMobile'
-        }
-    </script> -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <!-- 天地图 -->
-    <script src="https://api.tianditu.gov.cn/api?v=4.0&tk=7b036021d9213378213ecdefb18162db" type="text/javascript"></script>
-    <!-- 天地图轨迹类库 -->
-    <script src="./static/js/TMap/d3.js" charset="utf-8"></script>
-    <script src="./static/js/TMap/D3SvgOverlay.js" type="text/javascript"></script>
-    <script src="./static/js/TMap/CarTrack.js" type="text/javascript"></script>
     <!-- 动态尺寸 -->
     <script src="./static/js/bip-erp/flexible.js" type="text/javascript"></script>
     <title></title>
@@ -38,7 +16,28 @@
         request.onload = function () {
             if (request.status == 200) {
                 var config = JSON.parse(request.responseText);
-                document.getElementsByTagName("title")[0].innerText = config.Project_Name;		
+                document.getElementsByTagName("title")[0].innerText = config.Project_Name;
+                var head= document.getElementsByTagName('head')[0];
+                if(config.ITEMTYPE =='air-super'){
+                  //<!-- 天地图 -->
+                  var script1= document.createElement('script');  
+                  script1.type= 'text/javascript';  
+                  script1.src= 'https://api.tianditu.gov.cn/api?v=4.0&tk=7b036021d9213378213ecdefb18162db';  
+                  head.appendChild(script1);
+                  //<!-- 天地图轨迹类库 -->
+                  var script2= document.createElement('script');  
+                  script2.type= 'text/javascript';  
+                  script2.src= './static/js/TMap/d3.js';  
+                  head.appendChild(script2);
+                  var script3= document.createElement('script');  
+                  script3.type= 'text/javascript';  
+                  script3.src= './static/js/TMap/D3SvgOverlay.js';  
+                  head.appendChild(script3);
+                  var script4= document.createElement('script');  
+                  script4.type= 'text/javascript';  
+                  script4.src= './static/js/TMap/CarTrack.js';  
+                  head.appendChild(script4);
+                }
             }
         }	
     </script>
