--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <!-- 动态尺寸 -->
     <script src="./static/js/bip-erp/flexible.js" type="text/javascript"></script>
     <title></title>
-    <!-- <script type="text/javascript" src="https://api.tianditu.gov.cn/api?v=4.0&tk=7b036021d9213378213ecdefb18162db"></script>
+    <script type="text/javascript" src="https://api.tianditu.gov.cn/api?v=4.0&tk=7b036021d9213378213ecdefb18162db"></script>
     <script src="./static/js/TMap/d3.js" charset="utf-8"></script>
     <script src="./static/js/TMap/D3SvgOverlay.js"></script>
-    <script src="./static/js/TMap/CarTrack.js"></script> -->
+    <script src="./static/js/TMap/CarTrack.js"></script>
     <script type="text/javascript">
         var url = "./static/config.json"
         var request = new XMLHttpRequest();
